--- a/src/components/InputBox.css
+++ b/src/components/InputBox.css
@@ -1,10 +1,17 @@
 .inputBox {
-  position:absolute;
-  top:60px;
-  left:240px;
+  padding:10px 15px;
+  display:flex;
+}
+
+.check {
+  flex-shrink:0;
+  width:30px;
 }
 
 .addThread {
+  width:220px;
+  height:30px;
   border:1px solid black;
   border-radius: 5px;
 }
+
