--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -17,14 +17,16 @@
 .LoginBtn{
     position:absolute;
     z-index:10;
-    background:dodgerblue;
-    color:white;
+    background:transparent;
+    color:dodgerblue;
     margin: 0 !important;
+    border:none;
     width: auto;
     height: 40px;
-    top: -42px;
+    top: 400px;
     border-radius: 5px 5px 0 0;
-    left: 5px;
+    left: 400px;
+    cursor:pointer;
     
 }
 .Login .box,
