--- a/src/containers/Todolist.css
+++ b/src/containers/Todolist.css
@@ -3,7 +3,7 @@
   display:flex;
   flex-direction:row;
   height:50vh;
-  width:30vw;
+  min-width:30vw;
   border-radius:10px;
   overflow:hidden;
 }
@@ -27,27 +27,17 @@
   margin-left: -5px;
 }
 
-.box .topic .top .search-area {
-  position:relative;
-}
 
-.box .topic .top .search-area span{
-  position:absolute;
-  color:gray;
-  width:100%;
-  height:100%;
-  font-size:0.9em;
-  display:flex;
-  justify-content:center;
-  align-items: center;
-  
-}
-
-.box .topic .search-area input {
+.box .topic .top .search {
  border: none;
  border-radius: 3px;
  background: white;
  padding: 4px;
+}
+.box .topic .top .search::placeholder {
+  font-family: 'Font Awesome 5 Free';
+  color: blue;
+  font-weight: 400;
 }
 
 .box .lists{
